kubernetes/apps/base/security/vaultwarden/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  hostnames: ["vaultwarden.example.com"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vaultwarden
          namespace: security
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
